# B-Spline-FEM-Computation

./: .gitmodules  CMakeLists.txt  README.md
python/: CMakeLists.txt
python/bindings/: denseMatrixConversion.hpp  sparseMatrixConversion.hpp  splinekernel_python.cpp
python/scripts/: finiteelementshelper.py  laplaceProblem.py  plotBSplineBasis.py  plotBSplineBasis2D.py  plotBSplineCurve.py  plotBSplineSurface.py
splinekernel/: CMakeLists.txt
splinekernel/inc/: alias.hpp  basisfunctions.hpp  curve.hpp  finiteelements.hpp  sparse.hpp  surface.hpp  utilities.hpp
splinekernel/src/: basisfunctions.cpp  curve.cpp  finiteelements.cpp  sparse.cpp  surface.cpp  utilities.cpp
splinekernel/test/: basisfunctions_test.cpp  curve_test.cpp  finiteelements_test.cpp  sparse_test.cpp  surface_test.cpp
